@@ -1097,4 +1097,6 @@ November 30-?? 2011
 	so that it works when there is no shared memory segment.
 	*  Added spectcl/version URI to rest interface.
 	*  Linked docs for the fit command to the user guid.
+	*  Fixed bug #4960 - running SpecTcl from ~ fails. Note users will
+	need to get the new SpecTclRC.tcl from Skel.
 	
